# rust-app

./: docker-compose.yml
app/actix-web/src/: main.rs
app/projects/branches/src/: main.rs
app/projects/collections/: Cargo.toml
app/projects/collections/src/: main.rs  traning.rs
app/projects/enumeration/src/: main.rs
app/projects/generics/src/: generic.rs  lifetime.rs  trait.rs
app/projects/guessing_game/src/: main.rs
app/projects/hello_world/: main  main.rs
app/projects/ownership/: Cargo.toml
app/projects/ownership/src/: ownership.rs  reference.rs  slice.rs
app/projects/panic/src/: main.rs
app/projects/rectangles/src/: main.rs
app/projects/variables/: Cargo.toml
app/projects/variables/src/: bool.rs  calc.rs  char.rs  func.rs  tuple.rs
infra/rust/: Dockerfile
