[package]
name = "ownership"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ownership"
path = "./src/ownership.rs"

[[bin]]
name = "reference"
path = "./src/reference.rs"

[[bin]]
name = "slice"
path = "./src/slice.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]